# TianYouJi

./: .gitignore  AGENTS.md  README.md  sdkconfig
.opencode/agents/: agency-director.md  code-architect.md  docs-writer.md  hardware-engineer.md  memory-safety.md  pm.md  security-reviewer.md  software-engineer.md  supreme-leader.md  test-engineer.md  wireless-expert.md
.opencode/skills/compliance-gate/: SKILL.md
.opencode/skills/datasheet-verification/: SKILL.md
.opencode/skills/flag-protocol/: SKILL.md
.opencode/skills/grill-me/: SKILL.md
.opencode/skills/nrf24l01plus/: SKILL.md
.opencode/skills/pau-loop/: SKILL.md
.opencode/skills/pipeline/: SKILL.md
.opencode/skills/self-audit-checklist/: SKILL.md
.opencode/skills/systematic-debugging/: SKILL.md
.opencode/skills/verification-before-completion/: SKILL.md
captures/: DIAGNOSTIC_REPORT.txt  diag_live_test_nrf.pcap  e2e_20260606_180648_summary.txt  e2e_20260606_180757_nrf.pcap  e2e_20260606_180757_summary.txt  e2e_20260606_181602_summary.txt  nrf-sniffer-5s-test.pcap  ubertooth_nrf_combined.pcap
components/nrf24_espidf/: CMakeLists.txt
components/nrf24_espidf/include/nrf24_espidf/: hal_espidf.h
components/nrf24_espidf/src/: hal_espidf.cpp
components/nrf24l01plus/: CMakeLists.txt
components/nrf24l01plus/include/nrf24l01plus/: ble.h  ble_config.h  commands.h  diag.h  diag_boot.h  driver.h  hal.h  register_tests.h  registers.h
components/nrf24l01plus/include/nrf24l01plus/registers/: addresses.h  config.h  dynpd.h  en_aa.h  en_rxaddr.h  feature.h  (+10 more)
components/nrf24l01plus/src/: ble.cpp  ble_config.cpp  diag.cpp  diag_boot.cpp  diag_ce.cpp  driver.cpp  register_tests.cpp  static_asserts.cpp
components/nrf24l01plus/test/: test_registers.cpp
docs/learning/: CHANGELOG.md  INDEX.md  ble-advertising-esp32.md  ble-data-whitening-nrf24.md  ble-sniffer-architecture.md  cpp-enum-class-and-struct.md  esp32-app-main-basics.md  freertos-task-pinning.md  mosi-spi-register-verification.md  nrf24-ble-packet-crafting.md  nrf24-enaa-encrc-override.md  nrf24-point-to-point.md  nrf24-spectrum-scan.md  nrf24-spi-address-byte-order.md  nrf24-spi-basics.md  nrf24-spi-clone-chip-diagnostic.md  nrf24l01plus-register-map.md  rca-adv-access-addr-byte-order.md  rf-legal-boundaries.md  ubertooth-ble-testing.md  ubertooth-update-and-diagnostics.md
docs/pipeline/: TODO.md  agents.md  pipeline.md  workflow.md
docs/pipeline/logs/: 005-memory-safety-review.md  006-ubertooth-dewhiten-test-plan.md  007-dewhiten-unit-tests.md  008-ble-whitening-doc.md  009-ubertooth-tx-fix.md  010-ubertooth-learning-doc.md  011-challenger-software-engineer.md  012-challenger-hardware-engineer.md  013-challenger-wireless-expert.md
docs/pipeline/scripts/: ble_whiten_reference.py  t1-check.sh
docs/project-management/: TEMPLATE.md  counters.json  next-id.mjs
docs/project-management/adr/: nrf-adr-0001.md  nrf-adr-0002.md  nrf-adr-0003.md  nrf-adr-0004.md  nrf-adr-0005.md  nrf-adr-0006.md  nrf-adr-0007.md  nrf-adr-0008.md  nrf-adr-0009.md  nrf-adr-0010.md  nrf-adr-0011.md  nrf-adr-0012.md  nrf-adr-0013.md  nrf-adr-0014.md  nrf-adr-0015.md
docs/project-management/epics/: nrf-epic-003.md
docs/project-management/passports/: .gitkeep
main/: CMakeLists.txt  ble_sniffer.cpp  ble_sniffer.h  hal_espidf.cpp  hal_espidf.h  hello_world_main.c  hello_world_main.cpp  main.cpp
main/nrf24l01plus/registers/: 0x06_rf_setup.h
tests/: CMakeLists.txt  test_ble_dewhiten.cpp  test_rf_setup.cpp
tools/: ble_diag_test.sh  e2e_crossval_test.sh  ubertooth_btle_tx.py
